tester release til github package registry